bonus/confs/gitlab-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlab-ingress
  labels:
    app: gitlab
  annotations:
    spec.ingressClassName: traefik
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  # - http:
  - host: gitlab.cluster
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gitlab-webservice-default
            port:
              number: 8181
